# Linux-System-Monitor

./: CMakeList.txt  CMakeLists.txt  shell.nix
lib/imgui/: imgui_impl_glfw.cpp
src/: fifty  main.cpp  test.cpp
src/Core/: CpuManager.cpp  CpuManager.h  CpuParser.cpp  Manager.cpp  Manager.h  MemoryManager.cpp  MemoryManager.h  MemoryParser.cpp  NetParser.cpp  NetParser.h  NetworkManager.cpp  NetworkManager.h  ProcessManager.cpp  ProcessParser.cpp
src/LRM/: Application.cpp  Application.h  ProcessList.cpp
src/Models/: Cpu.h  Network.h  Process.h
